# termux-app

./: .cirrus.yml  .editorconfig  .env  .gitattributes  .github  .gitignore  .gitmodules  .gitpod.yml  .replit  .travis.yml  .travis.yml edit  00628983989776  Android.mk  Balon game  Blnd  Bot  CLAUDE.md  CNAME  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Calculadora pro  Create  Crypto  Damon West  DebuggingPreferencesFragment.java  EI  Ff.py  GITHUB_ACTIONS_SETUP.md  HaikalRETAX  HelpActivity.java  IG  Instvvv  Just play testore  KIRA  LICENSE  LICENSE.md  Life to the light  Main.py  My_ai.py  (+93 more)
termux-display/src/main/cpp/: CMakeLists.txt
termux-display/src/main/cpp/bzip2/: Makefile  bzip2.1  bzip2.1.preformatted  bzip2.c  bzip2.txt  manual.xml  prepare-release.sh
termux-display/src/main/cpp/freetype/: .clang-format  .gitignore  .gitlab-ci.yml  .gitmodules  .mailmap  CMakeLists.txt  Makefile  README  README.git  autogen.sh  configure  meson.build  meson_options.txt  modules.cfg  vms_make.com
termux-display/src/main/cpp/freetype/builds/: detect.mk  exports.mk  freetype.mk  link_dos.mk  link_std.mk  modules.mk  toplevel.mk
termux-display/src/main/cpp/freetype/devel/: ft2build.h  ftoption.h
termux-display/src/main/cpp/freetype/docs/: .gitignore  CHANGES  CMAKE  CUSTOMIZE  DEBUG  DOCGUIDE  INSTALL  INSTALL.ANY  INSTALL.CROSS  INSTALL.GNU  INSTALL.MAC  INSTALL.UNIX  INSTALL.VMS  MAKEPP  PROBLEMS  README  TODO  VERSIONS.TXT  formats.txt  freetype-config.1  raster.txt  release
termux-display/src/main/cpp/freetype/objs/: .gitignore  README
termux-display/src/main/cpp/freetype/subprojects/: harfbuzz.wrap  libpng.wrap  zlib.wrap
termux-display/src/main/cpp/freetype/tests/: README.md  meson.build
termux-display/src/main/cpp/libepoxy/: .dir-locals.el  .editorconfig  .gitignore  COPYING  README.md  meson.build  meson_options.txt
termux-display/src/main/cpp/libepoxy/test/: dlwrap.c  (+31 more)
termux-display/src/main/cpp/libfontenc/: .gitignore  .gitlab-ci.yml  COPYING  Makefile.am  README.md  autogen.sh  configure.ac  fontenc.pc.in
termux-display/src/main/cpp/libtirpc/: .gitignore  AUTHORS  COPYING  ChangeLog  HACKING  Makefile.am  NEWS  README  THANKS  TODO  VERSION  autogen.sh  bootstrap  configure.ac  libtirpc.pc.in
termux-display/src/main/cpp/libx11/: .gitignore  .gitlab-ci.yml  AUTHORS  COPYING  Makefile.am  README.md  autogen.sh  configure.ac  cpprules.in  x11-xcb.pc.in  x11.pc.in
termux-display/src/main/cpp/libxau/: .gitignore  .gitlab-ci.yml  AUTHORS  AuDispose.c  AuFileName.c  AuGetAddr.c  AuGetBest.c  AuLock.c  AuRead.c  AuUnlock.c  AuWrite.c  Autest.c  Makefile.am  README  autogen.sh  configure.ac  xau.pc.in
termux-display/src/main/cpp/libxcvt/: .gitlab-ci.yml  COPYING  README.md  meson.build
termux-display/src/main/cpp/libxdmcp/: .gitignore  .gitlab-ci.yml  AUTHORS  Array.c  COPYING  Fill.c  Flush.c  Key.c  Makefile.am  README.md  Read.c  Unwrap.c  Wrap.c  Wrap.h  Wraphelp.README.crypto  Wraphelp.c  Write.c  autogen.sh  configure.ac  xdmcp.pc.in
termux-display/src/main/cpp/libxfont/: .gitignore  .gitlab-ci.yml  AUTHORS  COPYING  Makefile.am  README.md  autogen.sh  configure.ac  devbook.am  xfont2.pc.in
termux-display/src/main/cpp/libxkbfile/: .gitignore  .gitlab-ci.yml  COPYING  Makefile.am  README.md  autogen.sh  configure.ac  meson.build  xkbfile.pc.in
termux-display/src/main/cpp/libxshmfence/: .gitignore  .gitlab-ci.yml  COPYING  Makefile.am  README.md  autogen.sh  configure.ac  xshmfence.pc.in
termux-display/src/main/cpp/libxtrans/: .gitignore  AUTHORS  COPYING  Makefile.am  README.md  Xtrans.c  Xtrans.h  Xtransint.h  Xtranslcl.c  Xtranssock.c  Xtransutil.c  autogen.sh  configure.ac  transport.c  xtrans.m4  xtrans.pc.in
termux-display/src/main/cpp/lorie/: InitInput.c  InitOutput.c  InputXKB.c  android.c  dri3.c  fbconfigs.h  lorie.h  renderer.c  renderer.h
termux-display/src/main/cpp/patches/: libepoxy.patch  x11.patch  xkbcomp.patch  xkbfile.patch  xserver.patch
termux-display/src/main/cpp/pixman/: .editorconfig  .gitignore  .gitlab-ci.yml  CODING_STYLE  COPYING  INSTALL  Makefile.am  Makefile.win32  Makefile.win32.common  README  RELEASING  a64-neon-test.S  arm-simd-test.S  autogen.sh  configure.ac  meson.build  meson_options.txt  neon-test.S  pixman-1-uninstalled.pc.in  pixman-1.pc.in
termux-display/src/main/cpp/recipes/: Xfont2.cmake  freetype.cmake  pixman.cmake  tirpc.cmake  xkbcomp.cmake  xorgproto.cmake  xserver.cmake  xshmfence.cmake
termux-display/src/main/cpp/xkbcomp/: .gitignore  .gitlab-ci.yml  COPYING  Makefile.am  README  action.c  action.h  alias.c.orig  alias.h  autogen.sh  compat.c  compat.h  configure.ac  expr.c  expr.h  geometry.c  indicators.c  indicators.h  keycodes.c  keycodes.h  keymap.c  keytypes.c  listing.c  misc.c  misc.h  parseutils.c  parseutils.h  symbols.c  tokens.h  utils.c  utils.h  vmod.c  vmod.h  xkbcomp.c  xkbcomp.h  xkbcomp.pc.in  xkbparse.y  xkbpath.c  xkbpath.h  xkbscan.c
termux-display/src/main/cpp/xorgproto/: .gitignore  .gitlab-ci.yml  AUTHORS  COPYING-applewmproto  COPYING-bigreqsproto  COPYING-compositeproto  COPYING-damageproto  COPYING-dmxproto  COPYING-dri2proto  COPYING-evieproto  COPYING-fixesproto  COPYING-fontcacheproto  COPYING-fontsproto  COPYING-glproto  COPYING-inputproto  COPYING-kbproto  COPYING-lg3dproto  COPYING-pmproto  COPYING-printproto  COPYING-randrproto  COPYING-recordproto  COPYING-renderproto  COPYING-resourceproto  COPYING-scrnsaverproto  COPYING-trapproto  COPYING-videoproto  COPYING-windowswmproto  COPYING-x11proto  COPYING-xcmiscproto  COPYING-xextproto  COPYING-xf86driproto  COPYING-xf86miscproto  COPYING-xf86vidmodeproto  COPYING-xineramaproto  COPYING-xwaylandproto  INSTALL  Makefile.am  PM_spec  README.md  applewmproto.pc.in  (+53 more)
termux-display/src/main/cpp/xrio/: android.c  math.h  renderer.c
termux-display/src/main/cpp/xserver/: .appveyor.yml  .dir-locals.el  .gitignore  .gitlab-ci.yml  .travis.yml  COPYING  Makefile.am  README.md  autogen.sh  configure.ac  devbook.am  manpages.am  meson.build  meson_options.txt  xorg-server.m4  xorg-server.pc.in  xserver.ent.in
(+5581 files in other folders)
